# codelens

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AnalysisDashboard.tsx  SearchPanel.tsx
frontend/src/pages/: AnalysisPage.tsx  ArchitecturePage.tsx  HistoryPage.tsx  SearchPage.tsx
infrastructure/: cdk.json  package-lock.json  package.json
infrastructure/lib/: codelens-stack.ts
services/api/: config.py  main.py  pyproject.toml
services/api/core/: chunker.py  graph.py  parser.py
services/api/models/: schemas.py
services/api/routers/: analysis.py  docs.py  search.py
services/api/services/: aws_client.py  embedder.py
services/api/tests/: test_core.py  test_graph.py
services/lambda/: Dockerfile  handler.py  orchestrator.py  prompts.py  rate_limiter.py  requirements.txt  state.py
